# DNS-Resolver

./: .gitignore  CMakeLists.txt  README.md  defaultParsers.hpp  dnsLookup.cpp  dnsLookup.hpp  dnsTypes.hpp  esp32UdpVrapper.hpp  main.cpp  sockets.hpp  udpInterface.hpp
examples/exampleUsingCustomParsers/: CMakeLists.txt  main.cpp
examples/exampleUsingDefaultParsers/: CMakeLists.txt  main.cpp
include/DnsLookup/: defaultParsers.hpp  dnsLookup.hpp  dnsTypes.hpp  helperFunctions.hpp  udpInterface.hpp
include/UdpWrapper/: winSockets.hpp
src/: dnsLookup.cpp  helperFunctions.cpp
